🧪 Add test notification button to VibeTunnel Mac app
- Add test notification endpoint and SSE handling
- Implement test notification button in settings
- Add comprehensive logging and error handling
- Include PR description for documentation

--- a/web/package.json
+++ b/web/package.json
@@ -77,7 +77,8 @@
     "test:e2e:parallel": "PLAYWRIGHT_PARALLEL=true playwright test",
     "test:e2e:parallel:headed": "PLAYWRIGHT_PARALLEL=true playwright test --headed",
     "test:e2e:parallel:workers": "PLAYWRIGHT_PARALLEL=true PLAYWRIGHT_WORKERS=4 playwright test",
-    "prepare": "husky"
+    "prepare": "husky",
+    "debug-notifications": "tsx src/cli/debug-notifications.ts"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
